tests/error/const_non_mutable.gw
#! [contains] right-side operand is non-mutable
10 :=> const int i;
12 :=> i;
<<< i >>>;
